Rename pages, add coming soon to modloader and forge, add tooltip to setting

--- a/project/SPTarkov.Launcher/Components/ForgeManager/ModCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/ForgeManager/ModCardComponent.razor
@@ -88,7 +88,7 @@
     {
         // navigate to mod page
         Console.WriteLine($"Navigating to mod page: {modId}");
-        NavigationManager.NavigateTo($"/ForgeModPage/{modId}");
+        NavigationManager.NavigateTo($"/ForgeMod/{modId}");
     }
 
 }
