--- a/project/SPTarkov.Launcher/Components/Settings/SettingsRightPanelComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/SettingsRightPanelComponent.razor
@@ -1,6 +1,6 @@
 ﻿<MudItem sm="6">
     <MudGrid>
         <AdvancedPanelComponent/>
-        <DebugPanelComponent/>
+        @* <DebugPanelComponent/> *@
     </MudGrid>
 </MudItem>
