--- a/project/SPTarkov.Launcher/Pages/Settings.razor
+++ b/project/SPTarkov.Launcher/Pages/Settings.razor
@@ -1,4 +1,4 @@
-﻿@page "/SettingsPage"
+﻿@page "/Settings"
 
 <MudContainer Class="px-8 pb-4 my-2" MaxWidth="MaxWidth.Large">
     <SettingsTopPanelComponent/>
