--- a/project/SPTarkov.Launcher/Pages/Home.razor
+++ b/project/SPTarkov.Launcher/Pages/Home.razor
@@ -5,7 +5,7 @@
 
 <MudContainer Class="px-8 my-2" MaxWidth="MaxWidth.Large">
     <MudContainer Class="pa-0 d-flex justify-space-between pb-4">
-        <MudButton Color="Color.Primary" StartIcon="@Icons.Material.Filled.AddToQueue" Size="Size.Large" OnClick="RunAddTask" Variant="Variant.Filled">Add New Server</MudButton>
+        <MudButton Color="Color.Dark" StartIcon="@Icons.Material.Filled.AddToQueue" Size="Size.Large" OnClick="RunAddTask" Variant="Variant.Filled" IconColor="Color.Success">Add New Server</MudButton>
     </MudContainer>
     <MudGrid>
         @if (serverList.Any())
